--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documet</title>
-    <title>sa facut</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
-    <h3>I love you Nurdai!</h3>
-    
+    <Header class="header">
+        <div class="container section header-list">
+        <a href="index.html" class="logo link"><span class="header-logo">Tudor</span>Braga</a>        
+        <nav class="menu">
+            <ul class="list header-list">
+                <li><a class="link  nav-item current" href="index.html">Main</a></li>
+                <li><a class="link nav-item" href="scroll.html">Scroll</a></li>
+                <li><a class="link nav-item" href="kalendar.html">Kalendar</a></li>
+            </ul></div>
+        </nav>
+    </Header>
+    <section class="hero section">
+        <div class="container section">
+            <h1>Ordnung</h1>        
+            <button>Button</button>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container section header-list">
+            <a href="index.html" class="logo link"><span class="header-logo">Tudor</span>Braga</a>
+            </div>
+    </footer>
 </body>
+
 </html>
